[package]
name = "make-stats-json"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
confy = "0.4"
exitcode = "1.1.2"
human-panic = "1.0"
log = "0.4"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
simple-logging = "2.0"
structopt = "0.3"
